tests/async_component_syntax/async_component_syntax.exp
Error ---------------------------------------------------------------------------------------------------- test.js:20:37

Cannot create `AsyncWithProps` element because in property `foo`: string [1] is incompatible with number [2].
[incompatible-type]

   test.js:20:37
   20| const _usage3 = <AsyncWithProps foo="bad" bar={42} />; // ERROR 2x
                                           ^^^^^ [1]

References:
   test.js:14:37
   14| async component AsyncWithProps(foo: number, bar: string) {
                                           ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:20:48

Cannot create `AsyncWithProps` element because in property `bar`: number [1] is incompatible with string [2].
[incompatible-type]

   test.js:20:48
   20| const _usage3 = <AsyncWithProps foo="bad" bar={42} />; // ERROR 2x
                                                      ^^ [1]

References:
   test.js:14:50
   14| async component AsyncWithProps(foo: number, bar: string) {
                                                        ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:47:10

Cannot return `result` because `Promise` [1] is incompatible with string [2]. [incompatible-type]

   test.js:47:10
     47|   return result;
                  ^^^^^^

References:
   <BUILTINS>/core.js:2285:15
   2285| declare class Promise<+R = mixed> {
                       ^^^^^^^ [1]
   test.js:45:28
     45| async hook useAsyncHook(): string {
                                    ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:64:10

Cannot return `await Promise.resolve(...)` because `Promise` [1] is incompatible with string [2]. [incompatible-type]

   test.js:64:10
     64|   return await Promise.resolve("hello");
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/core.js:2285:15
   2285| declare class Promise<+R = mixed> {
                       ^^^^^^^ [1]
   test.js:63:43
     63| export async hook useExportedAsyncHook(): string {
                                                   ^^^^^^ [2]



Found 4 errors
